--- a/ch5/ex-gen-app/package.json
+++ b/ch5/ex-gen-app/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.5",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "xml2js": "^0.4.17"
   }
 }
