--- a/ch5/ex-gen-app/package.json
+++ b/ch5/ex-gen-app/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
+    "sqlite3": "^3.1.9",
     "xml2js": "^0.4.17"
   }
 }
