npm i -S express-validator

--- a/ch6/ex-gen-app/package.json
+++ b/ch6/ex-gen-app/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "express-jquery": "^1.8.3",
     "express-session": "^1.15.5",
+    "express-validator": "^3.2.1",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
