--- a/ch6/ex-gen-app/package.json
+++ b/ch6/ex-gen-app/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "jquery": "^3.2.1",
+    "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "sqlite3": "^3.1.9",
