--- a/ch7/mark_app/package.json
+++ b/ch7/mark_app/package.json
@@ -7,11 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "bookshelf": "^0.10.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
+    "express-validator": "^3.2.1",
+    "knex": "^0.13.0",
+    "markdown": "^0.5.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sqlite3": "^3.1.9"
   }
 }
